# mkrawimg

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  mkrawimg
devices/generic/pc-cloud-amd64/: apply-bootloader.sh  device.toml
devices/generic/pc-cloud-arm64/: apply-bootloader.sh  device.toml
devices/generic/pc-cloud-loongarch64/: apply-bootloader.sh  device.toml
devices/generic/pc-efi/: apply-bootloader.sh  device.toml
devices/loongson/2k0300/: base.lst  device.toml  sources.list
devices/podman-mach/amd64/: apply-bootloader.sh  device.toml  postinst.sh
devices/podman-mach/common/: postinst.sh
devices/raspberrypi/common/: apply-bootloader.bash
devices/raspberrypi/pi-3b/: apply-bootloader.bash  device.toml
devices/raspberrypi/pi-4b/: apply-bootloader.bash  device.toml
devices/raspberrypi/pi-5b/: apply-bootloader.bash  device.toml
devices/starfive/visionfive-2/: apply-bootloader.bash  device.toml
src/: bootloader.rs  cli.rs  context.rs  device.rs  filesystem.rs  main.rs  partition.rs  pm.rs  registry.rs  tests.rs  topics.rs  utils.rs
