[package]
name = "mkrawimg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
colog = "1.3.0"
ctrlc = "3.4.5"
env_logger = "0.11.5"
errno = "0.3.10"
flate2 = "1.0.35"
gptman = "1.1.2"
libc = "0.2.168"
log = { version = "0.4.22", features = ["std"] }
loopdev = { git = "https://github.com/mdaffin/loopdev", version = "0.5.0" }
mbrman = "0.5.2"
num_cpus = "1.16.0"
owo-colors = { version = "4.1.0", features = ["supports-colors"] }
rand = "0.8.5"
serde = { version = "1.0.216", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
sys-mount = "3.0.1"
termsize = "0.1.9"
toml = { version = "0.8.19", features = ["preserve_order"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "serde"] }
walkdir = "2.5.0"
xz2 = "0.1.7"
zstd = { version = "0.13.2", features = ["zstdmt"] }
