[package]
name = "mkrawimg"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.94"
blkid = "1.0.1"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
colog = "1.3.0"
ctrlc = "3.4.5"
env_logger = "0.11.5"
errno = "0.3.11"
flate2 = "1.0.35"
gptman = "1.1.2"
libc = "0.2.168"
log = { version = "0.4.22", features = ["std"] }
loopdev = { version = "0.5", package = "loopdev-3" }
mbrman = "0.5.2"
num_cpus = "1.16.0"
owo-colors = { version = "4.1.0", features = ["supports-colors"] }
rand = "0.9"
reqwest = { version = "0.12.11", features = ["blocking"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
strum = { version = "0.27", features = ["derive"] }
sys-mount = "3.0.1"
termsize = "0.1.9"
toml = { version = "0.8.19", features = ["preserve_order"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "serde"] }
walkdir = "2.5.0"
xz2 = "0.1.7"
zstd = { version = "0.13.2", features = ["zstdmt"] }
